--- a/app/src/main/res/layout/activity_ask.xml
+++ b/app/src/main/res/layout/activity_ask.xml
@@ -44,7 +44,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="5dp"
                 android:padding="4dp"
-                android:textDirection="rtl" />
+                android:textDirection="rtl"
+                android:background="@color/white"/>
 
             <View
                 android:id="@+id/vvv1"
