--- a/app/src/main/res/layout/activity_view_instructor_profile.xml
+++ b/app/src/main/res/layout/activity_view_instructor_profile.xml
@@ -215,7 +215,7 @@
                 android:id="@+id/buttonReserve"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Reserve a lesson"
+                android:text="احجز درس "
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
