--- a/app/src/main/res/layout/content_notifications.xml
+++ b/app/src/main/res/layout/content_notifications.xml
@@ -16,7 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,6 +36,8 @@
 
 
         </android.support.v7.widget.CardView>
+</ScrollView>
+
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,7 +51,9 @@
                 />
 
         </android.support.v7.widget.CardView>
-
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -68,7 +74,7 @@
         </android.support.v7.widget.CardView>
 
 
-
+        </ScrollView>
 
 
     </LinearLayout>
