--- a/app/src/main/res/layout/content_notifications.xml
+++ b/app/src/main/res/layout/content_notifications.xml
@@ -10,6 +10,9 @@
     android:background="#e6f2ff"
 
     >
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/container"
         android:orientation="vertical"
@@ -27,6 +30,18 @@
             android:layout_marginTop="60dp"
             app:cardElevation="5dp"
             >
+
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:text="الحجوزات"
+                android:textAlignment="center"
+                android:textSize="13dp"
+                android:textColor="#e29c9c"
+                />
             <ListView
                 android:id="@+id/list2"
                 android:layout_width="wrap_content"
@@ -37,7 +52,6 @@
 
         </android.support.v7.widget.CardView>
 </ScrollView>
-
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -51,10 +65,10 @@
                 />
 
         </android.support.v7.widget.CardView>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,6 +78,17 @@
             app:cardElevation="5dp"
             >
 
+            <TextView
+                android:id="@+id/text1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:text="الإلغاء"
+                android:textAlignment="center"
+                android:textSize="13dp"
+                android:textColor="#e29c9c"
+                />
             <ListView
                 android:id="@+id/list3"
                 android:layout_marginTop="60dp"
@@ -72,11 +97,43 @@
                 android:layout_weight="5"></ListView>
 
         </android.support.v7.widget.CardView>
+</ScrollView>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:layout_margin="4dp"
+                android:layout_marginTop="60dp"
+                app:cardElevation="5dp"
+                >
 
+                <TextView
+                    android:id="@+id/text2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="التعديل"
+                    android:textAlignment="center"
+                    android:textSize="13dp"
+                    android:textColor="#e29c9c"
+                    />
+                <ListView
+                    android:id="@+id/list4"
+                    android:layout_marginTop="60dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"></ListView>
+
+            </android.support.v7.widget.CardView>
         </ScrollView>
 
 
-    </LinearLayout>
 
+    </LinearLayout>
+</ScrollView>
 </RelativeLayout>
