--- a/app/src/main/res/layout/content_notifications2.xml
+++ b/app/src/main/res/layout/content_notifications2.xml
@@ -6,67 +6,134 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".notifications2"
-    tools:showIn="@layout/app_bar_student_main"
+    tools:showIn="@layout/app_bar_instructor_main"
     android:background="#e6f2ff"
+
     >
-    <LinearLayout
-        android:id="@+id/container"
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
-        <android.support.v7.widget.CardView
+        <LinearLayout
+            android:id="@+id/container"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:layout_margin="4dp"
-            android:layout_marginTop="60dp"
-            app:cardElevation="5dp"
-            >
-            <ListView
-                android:id="@+id/list1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            android:layout_height="match_parent">
 
-                ></ListView>
-
-
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            app:cardElevation="5dp"
-            >
-            <View
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:background="#e6f2ff"
-                />
+                android:layout_height="match_parent">
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:layout_margin="4dp"
+                    android:layout_marginTop="60dp"
+                    app:cardElevation="5dp"
+                    >
 
-        </android.support.v7.widget.CardView>
+                    <TextView
+                        android:id="@+id/text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:text="الأساتذة الجدد"
+                        android:textAlignment="center"
+                        android:textSize="13dp"
+                        android:textColor="#e29c9c"
+                        />
+                    <ListView
+                        android:id="@+id/list1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        ></ListView>
 
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:layout_margin="4dp"
-            android:layout_marginTop="60dp"
-            app:cardElevation="5dp"
-            >
-
-            <ListView
-                android:id="@+id/list2"
-                android:layout_marginTop="60dp"
-                android:layout_width="wrap_content"
+                </android.support.v7.widget.CardView>
+            </ScrollView>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"></ListView>
+                android:layout_margin="4dp"
+                app:cardElevation="5dp"
+                >
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:background="#e6f2ff"
+                    />
 
-        </android.support.v7.widget.CardView>
+            </android.support.v7.widget.CardView>
 
-    </LinearLayout>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:layout_margin="4dp"
+                    android:layout_marginTop="60dp"
+                    app:cardElevation="5dp"
+                    >
+
+                    <TextView
+                        android:id="@+id/text1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:text="الإلغاء"
+                        android:textAlignment="center"
+                        android:textSize="13dp"
+                        android:textColor="#e29c9c"
+                        />
+                    <ListView
+                        android:id="@+id/list2"
+                        android:layout_marginTop="60dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="5"></ListView>
+
+                </android.support.v7.widget.CardView>
+            </ScrollView>
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:layout_margin="4dp"
+                    android:layout_marginTop="60dp"
+                    app:cardElevation="5dp"
+                    >
+
+                    <TextView
+                        android:id="@+id/text2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:text="التعديل"
+                        android:textAlignment="center"
+                        android:textSize="13dp"
+                        android:textColor="#e29c9c"
+                        />
+                    <ListView
+                        android:id="@+id/list3"
+                        android:layout_marginTop="60dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="5"></ListView>
+
+                </android.support.v7.widget.CardView>
+            </ScrollView>
 
 
+
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
