--- a/app/src/main/res/layout/past_fragment.xml
+++ b/app/src/main/res/layout/past_fragment.xml
@@ -20,7 +20,7 @@
 
         <ListView
             android:id="@+id/listViewPast"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="4dp"
