--- a/app/src/main/res/layout/upcoming_fragment.xml
+++ b/app/src/main/res/layout/upcoming_fragment.xml
@@ -17,7 +17,7 @@
 
     <ListView
         android:id="@+id/listViewUpcoming"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_margin="20dp"
